--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 <mat-toolbar color="primary">
-  <button mat-icon-button (click)="toggleSidebar()">
+  <button mat-icon-button (click)="toggleSidebar()" class="menu-toggle">
     <mat-icon>menu</mat-icon>
   </button>
   <span class="title">{{ title }}</span>
 </mat-toolbar>
 <mat-sidenav-container>
-  <mat-sidenav mode="side" [opened]="isSidebarOpen"> Sidenav </mat-sidenav>
+  <mat-sidenav mode="side" [opened]="isSidebarOpen">
+    <app-main-nav></app-main-nav>
+  </mat-sidenav>
   <mat-sidenav-content>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
