major refatoring in structured directories

--- a/src/app/layout/auth-layout/auth-layout.component.scss
+++ b/src/app/layout/auth-layout/auth-layout.component.scss
@@ -1,9 +1,9 @@
 :host {
   display: flex;
-  padding: 2em 0;
   align-items: center;
   justify-content: center;
 }
-form {
-  width: 250px;
+
+.container {
+  max-width: 250px;
 }
