--- a/src/app/layout/auth-layout/auth-layout.component.html
+++ b/src/app/layout/auth-layout/auth-layout.component.html
@@ -1,3 +1,9 @@
-<div class="container">
+<header>
+  <img
+    src="/assets/logo-scritta-notte.svg"
+    alt="Ronda della Carità di Verona"
+  />
+</header>
+<section class="container">
   <router-outlet></router-outlet>
-</div>
+</section>
