fix login styles

--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -8,7 +8,7 @@
     <mat-label>Password</mat-label>
     <input matInput type="password" formControlName="password" />
     <mat-hint>
-      <a href="/recover-password">password dimenticata?</a>
+      <a href="/recover-password">Password dimenticata?</a>
     </mat-hint>
   </mat-form-field>
   <button mat-raised-button color="primary">Accedi</button>
