--- a/src/app/modules/auth/login/login.component.scss
+++ b/src/app/modules/auth/login/login.component.scss
@@ -1,7 +1,13 @@
+form {
+  margin-bottom: 1.5em;
+}
 .mat-form-field {
   width: 100%;
 }
 .mat-button-base {
   width: 100%;
   margin: 1em 0;
+}
+.utils-links {
+  font-size: 0.9em;
 }
