--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,116 +1,212 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,700;1,400;1,500&display=swap");
-
-
-body, input{
-    font-family: 'Poppins', sans-serif;
+.wave{
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	height: 100%;
+	z-index: -1;
 }
 
-
-.body-forms{
-    margin:0;
+.container{
+    width: 100vw;
     height: 100vh;
-    width:100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    overflow: hidden;
-    color: #03a1fc;
-    background-color: #fff;
-    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap :7rem;
+    padding: 0 2rem;
 }
 
-.main{
-    width: 350px;
-    height:550px;
-    margin-bottom:200px;
-    padding: 60px 35px 35px 35px;
-    border-radius:20px;
-    background-color:#fff;
-    font-weight: 700;
-    box-shadow: 5px 5px 6px rgba(0,0,0,0.7);
+.img{
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
 }
 
-.logo{
-    width:140px;
-    height:140px;
-    margin: 50px 75px;
-    border-radius: 50px;
+.login-content{
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	text-align: center;
 }
 
-/* .signin-signup{
-    top:50%;
-    left:75%;
-
-    transform: translate(-50%, -50%);
-    width:50%;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-} */
+.img img{
+	width: 500px;
+}
 
 form{
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+	width: 360px;
 }
 
-.title{
-    font-size:2.2rem;
-    color: #444;
-    margin-bottom: 10px;
+.login-content img{
+    height: 100px;
 }
 
-.input-field{
-    max-width: 280px;
-    width: 100%;
-    height:55px;
-    background-color: #f0f0f0;
-    margin:10px 0;
-    border-radius:55px;
-    display:grid;
-    grid-template-columns: 15% 85%;
-    padding:0 4rem;
+.login-content h2{
+	margin: 15px 0;
+	color: #333;
+	text-transform: uppercase;
+	font-size: 2.9rem;
 }
 
-.input-field i{
-    text-align: center;
-    line-height: 55px;
-    color: #acacac;
-    font-size: 1.1rem;
+.login-content .input-div{
+	position: relative;
+    display: grid;
+    grid-template-columns: 7% 93%;
+    margin: 25px 0;
+    padding: 5px 0;
+    border-bottom: 2px solid #d9d9d9;
 }
 
-.input-field input{
-    background:none;
-    outline:none;
-    border: none;
-    line-height: 1;
-    font-weight: 500;
-    font-size:1.1rem;
-    color: #333;
+.login-content .input-div.one{
+	margin-top: 0;
 }
 
-.input-field input::placeholder{
-    color: #aaa;
-    font-weight: 500;
+.i{
+	color: #d9d9d9;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.i i{
+	transition: .3s;
+}
+
+.input-div > div{
+    position: relative;
+	height: 45px;
+}
+
+/* .input-div > div > h5{
+	position: absolute;
+	left: 10px;
+	top: 50%;
+	transform: translateY(-50%);
+	color: #333;
+	font-size: 18px;
+	transition: .3s;
+} */
+/* 
+.input-div:before, .input-div:after{
+	content: '';
+	position: absolute;
+	bottom: -2px;
+	width: 0%;
+	height: 2px;
+	background-color: #38d39f;
+	transition: .4s;
+} */
+/* 
+.input-div:before{
+	right: 50%;
+}
+
+.input-div:after{
+	left: 50%;
+}
+
+.input-div.focus:before, .input-div.focus:after{
+	width: 50%;
+}
+
+.input-div.focus > div > h5{
+	top: -5px;
+	font-size: 15px;
+} */
+
+.input-div.focus > .i > i{
+	color: #38d39f;
+}
+
+.input-div > div > input{
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	border: none;
+	outline: none;
+	background: none;
+	padding: 0.5rem 0.7rem;
+	font-size: 1.2rem;
+	color: #333;
+	font-family: 'poppins', sans-serif;
+}
+
+.input-div.pass{
+	margin-bottom: 4px;
+}
+
+.Link{
+	display: block;
+	text-align: right;
+	text-decoration: none;
+	color: #333;
+	font-size: 0.9rem;
+	transition: .3s;
+}
+
+.Link:hover{
+	text-decoration: none;
+	color: #38d39f;
 }
 
 .btn{
-    width: 150px;
-    height:49px;
-    border:none;
-    border-radius: 49px;
-    cursor: pointer;
-    background-color: #4d84e2;
-    color:#fff;
-    font-weight: 600;
-    margin:10px 0;
-    transition: .5s;
+	display: block;
+	width: 100%;
+	height: 50px;
+	border-radius: 25px;
+	outline: none;
+	border: none;
+	background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
+	background-size: 200%;
+	font-size: 1.2rem;
+	color: #333;
+	font-family: 'Poppins', sans-serif;
+	text-transform: uppercase;
+	margin: 1rem 0;
+	cursor: pointer;
+	transition: .5s;
 }
-
 .btn:hover{
-    background-color: #0066ff;
+	background-position: right;
 }
 
+
+@media screen and (max-width: 1050px){
+	.container{
+		grid-gap: 5rem;
+	}
+}
+
+@media screen and (max-width: 1000px){
+	form{
+		width: 290px;
+	}
+
+	.login-content h2{
+        font-size: 2.4rem;
+        margin: 8px 0;
+	}
+
+	.img img{
+		width: 400px;
+	}
+}
+
+@media screen and (max-width: 900px){
+	.container{
+		grid-template-columns: 1fr;
+	}
+
+	.img{
+		display: none;
+	}
+
+	.wave{
+		display: none;
+	}
+
+	.login-content{
+		justify-content: center;
+	}
+}
