--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -171,6 +171,19 @@ form{
 	background-position: right;
 }
 
+.error__banner{
+	width:100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #d32f2f;
+	color:#fff;
+	opacity: 0.8;
+	z-index:1;
+	font-weight: 800;
+	font-size:23px;
+}
+
 
 @media screen and (max-width: 1050px){
 	.container{
