--- a/src/app/layout/main-layout/main-layout.component.scss
+++ b/src/app/layout/main-layout/main-layout.component.scss
@@ -1,11 +1,17 @@
 @import "../../../functions";
 
+.mat-sidenav-container {
+  min-height: calc(100vh - 64px);
+}
+
 @include breakpoint(laptop) {
   .menu-toggle {
     display: none;
   }
-}
-
-.mat-sidenav-container {
-  min-height: calc(100vh - 64px);
+  .mat-sidenav-container {
+    min-height: calc(100vh - 64px);
+  }
+  .mat-sidenav-content {
+    padding: 20px;
+  }
 }
