hide Users nav for non-admins

--- a/src/app/layout/main-nav/main-nav.component.html
+++ b/src/app/layout/main-nav/main-nav.component.html
@@ -29,7 +29,7 @@
       </li>
     </ul>
   </section>
-  <section>
+  <section *ngIf="isAdmin() | async">
     <h2><mat-icon>person</mat-icon> Volontari</h2>
     <ul>
       <li>
