--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,9 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+a {
+  color: mat-color($ronda-warehouse-accent);
+  text-decoration: none;
+  border-bottom: 1px solid mat-color($ronda-warehouse-accent);
+}
