--- a/src/app/layout/main-nav/main-nav.component.html
+++ b/src/app/layout/main-nav/main-nav.component.html
@@ -1,54 +1,45 @@
-<nav>
-  <section>
-    <h2><mat-icon>shopping_bag</mat-icon> Ordini</h2>
-    <ul>
-      <li>
-        <a routerLink="orders/create">
-          <span>Nuovo ordine</span>
-        </a>
-      </li>
-      <li>
-        <a routerLink="orders/">
-          <span>Lista ordini</span>
-        </a>
-      </li>
-    </ul>
-  </section>
-  <section>
-    <h2><mat-icon>emoji_people</mat-icon> Assistiti</h2>
-    <ul>
-      <li>
-        <a routerLink="recipients/create">
-          <span>Registra assistito</span>
-        </a>
-      </li>
-      <li>
-        <a routerLink="recipients/">
-          <span>Lista assistiti</span>
-        </a>
-      </li>
-    </ul>
-  </section>
-  <section *ngIf="isAdmin() | async">
-    <h2><mat-icon>person</mat-icon> Volontari</h2>
-    <ul>
-      <li>
-        <a routerLink="users/create">
-          <span>Registra volontario</span>
-        </a>
-      </li>
-      <li>
-        <a routerLink="users/">
-          <span>Lista volontari</span>
-        </a>
-      </li>
-    </ul>
-  </section>
-  <ul>
-    <li>
-      <a (click)="doLogout()" matRipple>
-        <mat-icon>exit_to_app</mat-icon><span>Logout</span>
+<mat-nav-list>
+  <h3 matSubheader><mat-icon>shopping_bag</mat-icon> Ordini</h3>
+  <mat-list-item>
+    <a routerLink="orders/create">
+      <span>Nuovo ordine</span>
+    </a>
+  </mat-list-item>
+  <mat-list-item>
+    <a routerLink="orders/">
+      <span>Lista ordini</span>
+    </a>
+  </mat-list-item>
+  <mat-divider></mat-divider>
+  <h3 matSubheader><mat-icon>emoji_people</mat-icon> Assistiti</h3>
+  <mat-list-item>
+    <a routerLink="recipients/create">
+      <span>Registra assistito</span>
+    </a>
+  </mat-list-item>
+  <mat-list-item>
+    <a routerLink="recipients/">
+      <span>Lista assistiti</span>
+    </a>
+  </mat-list-item>
+  <mat-divider></mat-divider>
+  <ng-container *ngIf="isAdmin() | async">
+    <h3 matSubheader><mat-icon>person</mat-icon> Volontari</h3>
+    <mat-list-item>
+      <a routerLink="users/create">
+        <span>Registra volontario</span>
       </a>
-    </li>
-  </ul>
-</nav>
+    </mat-list-item>
+    <mat-list-item>
+      <a routerLink="users/">
+        <span>Lista volontari</span>
+      </a>
+    </mat-list-item>
+    <mat-divider></mat-divider>
+  </ng-container>
+  <mat-list-item>
+    <a (click)="doLogout()">
+      <span>Logout</span>
+    </a>
+  </mat-list-item>
+</mat-nav-list>
