--- a/src/app/modules/user/create-user/create-user.component.html
+++ b/src/app/modules/user/create-user/create-user.component.html
@@ -1,8 +1,6 @@
+<h1>Registra volontario</h1>
 <form [formGroup]="userForm" (submit)="onSubmit()">
   <mat-card>
-    <mat-card-header>
-      <mat-card-title><h1>Registra volontario</h1></mat-card-title>
-    </mat-card-header>
     <mat-card-content>
       <mat-form-field>
         <mat-label>Nome</mat-label>
