--- a/src/app/layout/main-nav/main-nav.component.html
+++ b/src/app/layout/main-nav/main-nav.component.html
@@ -37,8 +37,8 @@
     </mat-list-item>
     <mat-divider></mat-divider>
   </ng-container>
-  <mat-list-item>
-    <a (click)="doLogout()">
+  <mat-list-item (click)="doLogout()">
+    <a>
       <span>Logout</span>
     </a>
   </mat-list-item>
