--- a/src/app/layout/auth-layout/auth-layout.component.html
+++ b/src/app/layout/auth-layout/auth-layout.component.html
@@ -1,8 +1,5 @@
 <header>
-  <img
-    src="/assets/logo-scritta-notte.svg"
-    alt="Ronda della Carità di Verona"
-  />
+  <img src="/assets/logo.svg" alt="Ronda della Carità di Verona" />
 </header>
 <section class="container">
   <router-outlet></router-outlet>
