--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -1,14 +1,17 @@
 <mat-toolbar color="primary">
-  <button mat-icon-button (click)="toggleSidebar()" class="menu-toggle">
-    <mat-icon>menu</mat-icon>
+  <figure class="logo">
+    <img src="/assets/logo-mini.svg" alt="Ronda della Carità" />
+  </figure>
+  <app-main-nav></app-main-nav>
+  <span class="spacer"></span>
+  <button mat-icon-button [matMenuTriggerFor]="profileMenu">
+    <mat-icon>account_circle</mat-icon>
   </button>
-  <span class="title">{{ title }}</span>
+  <mat-menu #profileMenu="matMenu">
+    <a routerLink="profile" mat-menu-item>Profilo</a>
+    <button (click)="doLogout()" mat-menu-item>Esci</button>
+  </mat-menu>
 </mat-toolbar>
-<mat-sidenav-container>
-  <mat-sidenav mode="side" [opened]="isSidebarOpen">
-    <app-main-nav></app-main-nav>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <router-outlet></router-outlet>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<div class="main-wrapper">
+  <router-outlet></router-outlet>
+</div>
