--- a/src/app/layout/main-layout/main-layout.component.scss
+++ b/src/app/layout/main-layout/main-layout.component.scss
@@ -1,14 +1,44 @@
 @import "../../../functions";
 
-.mat-sidenav-container {
-  min-height: calc(100vh - 64px);
-}
-.mat-sidenav-content {
-  padding: 20px;
+.mat-toolbar {
+  transition: all 1s ease-in-out;
 }
 
-@include breakpoint(laptop) {
-  .menu-toggle {
-    display: none;
+.logo {
+  background-color: white;
+  border-radius: 50%;
+  padding: 3px;
+  margin: 0;
+  margin-right: 10px;
+  transition: all 1s ease-in-out;
+  img {
+    transition: all 1s ease-in-out;
+    width: 52px;
+    height: 52px;
+    margin: 0;
+    padding: 0;
+    margin-bottom: -8px;
+  }
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
+
+.main-wrapper {
+  padding-top: 30px;
+}
+
+@include breakpoint(tablet) {
+  .main-wrapper {
+    padding: 30px;
+  }
+
+  .logo {
+    padding: 5px;
+    img {
+      width: 60px;
+      height: 60px;
+    }
   }
 }
