--- a/src/app/layout/main-nav/main-nav.component.scss
+++ b/src/app/layout/main-nav/main-nav.component.scss
@@ -1,3 +1,42 @@
-.mat-icon {
-  margin-right: 5px;
+@import "../../../functions";
+
+nav {
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    li {
+      transition: all 500ms ease-in-out;
+      a {
+        padding: 18px 20px;
+        text-decoration: none;
+        color: white;
+        font-size: 0.8em;
+        transition: all 1s ease-in-out;
+        &.current {
+          border-bottom: 3px solid white;
+          padding-bottom: 15px;
+        }
+      }
+    }
+  }
+}
+nav:hover {
+  ul li {
+    opacity: 0.7;
+  }
+  ul li:hover {
+    opacity: 1;
+  }
+}
+
+@include breakpoint(tablet) {
+  nav ul li a {
+    padding: 22px 20px;
+    &.current {
+      border-bottom: 5px solid white;
+      padding-bottom: 17px;
+    }
+  }
 }
