--- a/src/app/modules/user/user-list/user-list.component.html
+++ b/src/app/modules/user/user-list/user-list.component.html
@@ -5,12 +5,19 @@
 <div class="spinner-container" *ngIf="dataSource.loading$ | async">
   <mat-spinner></mat-spinner>
 </div>
-<table mat-table [dataSource]="dataSource">
+<table
+  mat-table
+  matSort
+  [dataSource]="dataSource"
+  (matSortChange)="sortData($event)"
+  [matSortActive]="filters.sort.active"
+  [matSortDirection]="filters.sort.direction"
+>
   <ng-container matColumnDef="memberNumber">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>N. Socio</th>
     <td mat-cell *matCellDef="let row">{{ row.memberNumber }}</td>
   </ng-container>
-  <ng-container matColumnDef="firstname">
+  <ng-container matColumnDef="lastname">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
     <td mat-cell *matCellDef="let row">
       {{ row.firstname }} {{ row.lastname }}
