--- a/src/app/modules/user/user-list/user-list.component.html
+++ b/src/app/modules/user/user-list/user-list.component.html
@@ -1,46 +1,51 @@
 <h1>Lista volontari</h1>
-<mat-toolbar color="default">
-  <a mat-button routerLink="/users/create">Registra Volontari&#601;</a>
-</mat-toolbar>
-<div class="spinner-container" *ngIf="dataSource.loading$ | async">
-  <mat-spinner></mat-spinner>
+<div class="listing-wrapper">
+  <mat-toolbar color="default">
+    <a mat-button routerLink="/users/create">Registra Volontari&#601;</a>
+  </mat-toolbar>
+  <div class="spinner-container" *ngIf="dataSource.loading$ | async">
+    <mat-spinner></mat-spinner>
+  </div>
+  <table
+    mat-table
+    matSort
+    [class.loading]="dataSource.loading$ | async"
+    [dataSource]="dataSource"
+    (matSortChange)="sortData($event)"
+    [matSortActive]="filters.sort.active"
+    [matSortDirection]="filters.sort.direction"
+  >
+    <ng-container matColumnDef="memberNumber">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>N. Socio</th>
+      <td mat-cell *matCellDef="let row">{{ row.memberNumber }}</td>
+    </ng-container>
+    <ng-container matColumnDef="lastname">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.firstname }} {{ row.lastname }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
+      <td mat-cell *matCellDef="let row">{{ row.email }}</td>
+    </ng-container>
+    <ng-container matColumnDef="role">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Ruolo</th>
+      <td mat-cell *matCellDef="let row">
+        <ng-container *ngIf="row.role === 'admin'">Amministratore</ng-container>
+        <ng-container *ngIf="row.role === 'member'">Volontario</ng-container>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+      <td mat-cell *matCellDef="let row">
+        <ng-container *ngIf="row.status === 'enabled'">Abilitato</ng-container>
+        <ng-container *ngIf="row.status === 'disabled'"
+          >Disabiltato</ng-container
+        >
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
 </div>
-<table
-  mat-table
-  matSort
-  [dataSource]="dataSource"
-  (matSortChange)="sortData($event)"
-  [matSortActive]="filters.sort.active"
-  [matSortDirection]="filters.sort.direction"
->
-  <ng-container matColumnDef="memberNumber">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>N. Socio</th>
-    <td mat-cell *matCellDef="let row">{{ row.memberNumber }}</td>
-  </ng-container>
-  <ng-container matColumnDef="lastname">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
-    <td mat-cell *matCellDef="let row">
-      {{ row.firstname }} {{ row.lastname }}
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="email">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
-    <td mat-cell *matCellDef="let row">{{ row.email }}</td>
-  </ng-container>
-  <ng-container matColumnDef="role">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Ruolo</th>
-    <td mat-cell *matCellDef="let row">
-      <ng-container *ngIf="row.role === 'admin'">Amministratore</ng-container>
-      <ng-container *ngIf="row.role === 'member'">Volontario</ng-container>
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="status">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-    <td mat-cell *matCellDef="let row">
-      <ng-container *ngIf="row.status === 'enabled'">Abilitato</ng-container>
-      <ng-container *ngIf="row.status === 'disabled'">Disabiltato</ng-container>
-    </td>
-  </ng-container>
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
