--- a/src/app/modules/user/user-list/user-list.component.scss
+++ b/src/app/modules/user/user-list/user-list.component.scss
@@ -1,9 +1,18 @@
 .mat-table {
   width: 100%;
 }
+.listing-wrapper {
+  position: relative;
+}
 .spinner-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 30px 0;
+}
+.loading {
+  opacity: 0.7;
 }
