--- a/src/app/modules/user/user-list/user-list.component.html
+++ b/src/app/modules/user/user-list/user-list.component.html
@@ -1,60 +1,93 @@
 <h1>Lista volontari</h1>
-<div class="listing-wrapper">
-  <mat-toolbar color="default">
-    <a mat-button routerLink="/users/create">Registra Volontari&#601;</a>
-  </mat-toolbar>
-  <div class="spinner-container" *ngIf="dataSource.loading$ | async">
-    <mat-spinner></mat-spinner>
+<div class="topbar">
+  <div class="main-actions">
+    <a mat-raised-button color="primary" routerLink="/users/create">
+      Registra Volontari&#601;
+    </a>
   </div>
-  <table
-    mat-table
-    matSort
-    [class.loading]="dataSource.loading$ | async"
-    [dataSource]="dataSource"
-    (matSortChange)="dataSource.sortBy($event)"
-    [matSortActive]="initialSort.active"
-    [matSortDirection]="initialSort.direction"
-  >
-    <ng-container matColumnDef="memberNumber">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>N. Socio</th>
-      <td mat-cell *matCellDef="let row">{{ row.memberNumber }}</td>
-    </ng-container>
-    <ng-container matColumnDef="lastname">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
-      <td mat-cell *matCellDef="let row">
-        {{ row.firstname }} {{ row.lastname }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
-      <td mat-cell *matCellDef="let row">{{ row.email }}</td>
-    </ng-container>
-    <ng-container matColumnDef="role">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Ruolo</th>
-      <td mat-cell *matCellDef="let row">
-        <ng-container *ngIf="row.role === 'admin'">Amministratore</ng-container>
-        <ng-container *ngIf="row.role === 'member'">Volontario</ng-container>
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-      <td mat-cell *matCellDef="let row">
-        <ng-container *ngIf="row.status === 'enabled'">Abilitato</ng-container>
-        <ng-container *ngIf="row.status === 'disabled'"
-          >Disabiltato</ng-container
-        >
-      </td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-  <mat-paginator
-    *ngIf="dataSource.page$ | async as page"
-    [length]="page.pagination.rowCount"
-    [pageSize]="page.pagination.pageSize"
-    [pageIndex]="page.pagination.page - 1"
-    [hidePageSize]="true"
-    (page)="dataSource.fetch($event.pageIndex)"
-  >
-  </mat-paginator>
+  <span class="spacer"></span>
+  <div class="filters">
+    <mat-form-field>
+      <mat-icon matPrefix>search</mat-icon>
+      <input
+        #in
+        (input)="dataSource.queryBy({ search: in.value })"
+        type="text"
+        matInput
+        placeholder="Search"
+      />
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Ruolo</mat-label>
+      <mat-select
+        (selectionChange)="dataSource.queryBy({ role: $event.value })"
+      >
+        <mat-option>Tutti</mat-option>
+        <mat-option value="admin">Amministratore</mat-option>
+        <mat-option value="member">Volontario</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Stato</mat-label>
+      <mat-select
+        (selectionChange)="dataSource.queryBy({ status: $event.value })"
+      >
+        <mat-option>Tutti</mat-option>
+        <mat-option value="enabled">Abilitato</mat-option>
+        <mat-option value="disabled">Disabilitato</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
 </div>
+<div class="spinner-container" *ngIf="dataSource.loading$ | async">
+  <mat-spinner></mat-spinner>
+</div>
+<table
+  mat-table
+  matSort
+  [class.loading]="dataSource.loading$ | async"
+  [dataSource]="dataSource"
+  (matSortChange)="dataSource.sortBy($event)"
+  [matSortActive]="initialSort.active"
+  [matSortDirection]="initialSort.direction"
+>
+  <ng-container matColumnDef="memberNumber">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>N. Socio</th>
+    <td mat-cell *matCellDef="let row">{{ row.memberNumber }}</td>
+  </ng-container>
+  <ng-container matColumnDef="lastname">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
+    <td mat-cell *matCellDef="let row">
+      {{ row.firstname }} {{ row.lastname }}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="email">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
+    <td mat-cell *matCellDef="let row">{{ row.email }}</td>
+  </ng-container>
+  <ng-container matColumnDef="role">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Ruolo</th>
+    <td mat-cell *matCellDef="let row">
+      <ng-container *ngIf="row.role === 'admin'">Amministratore</ng-container>
+      <ng-container *ngIf="row.role === 'member'">Volontario</ng-container>
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="status">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+    <td mat-cell *matCellDef="let row">
+      <ng-container *ngIf="row.status === 'enabled'">Abilitato</ng-container>
+      <ng-container *ngIf="row.status === 'disabled'">Disabiltato</ng-container>
+    </td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
+<mat-paginator
+  *ngIf="dataSource.page$ | async as page"
+  [length]="page.pagination.rowCount"
+  [pageSize]="page.pagination.pageSize"
+  [pageIndex]="page.pagination.page - 1"
+  [hidePageSize]="true"
+  (page)="dataSource.fetch($event.pageIndex)"
+>
+</mat-paginator>
