--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,23 @@ body {
 a {
   color: mat-color($ronda-warehouse-accent);
 }
+
+.spacer {
+  flex: 1 1 auto;
+}
+.topbar {
+  display: flex;
+  .main-actions {
+    display: flex;
+    align-items: center;
+  }
+}
+.filters {
+  display: flex;
+  .mat-form-field + .mat-form-field {
+    margin-left: 10px;
+  }
+  .mat-form-field-wrapper {
+    padding-bottom: 0;
+  }
+}
