add debounce to search filter

--- a/src/app/modules/user/users-filters/users-filters.component.html
+++ b/src/app/modules/user/users-filters/users-filters.component.html
@@ -3,7 +3,7 @@
     <mat-icon matPrefix>search</mat-icon>
     <input
       #in
-      (input)="dataSource.queryBy({ search: in.value })"
+      (afterValueChanged)="dataSource.queryBy({ search: in.value })"
       type="text"
       matInput
       placeholder="Search"
