--- a/src/app/modules/user/user-list/user-list.component.html
+++ b/src/app/modules/user/user-list/user-list.component.html
@@ -6,6 +6,9 @@
     </a>
   </div>
   <span class="spacer"></span>
+  <button mat-icon-button class="toggle-filters">
+    <mat-icon> manage_search </mat-icon>
+  </button>
   <app-users-filters [dataSource]="dataSource"></app-users-filters>
 </div>
 <div class="listing-wrapper">
