--- a/src/app/layout/main-nav/main-nav.component.scss
+++ b/src/app/layout/main-nav/main-nav.component.scss
@@ -1,42 +1,48 @@
 @import "../../../functions";
 
+:host {
+  width: 100%;
+}
+
 nav {
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    li {
-      transition: all 500ms ease-in-out;
-      a {
-        padding: 18px 20px;
-        text-decoration: none;
-        color: white;
-        font-size: 0.8em;
-        transition: all 1s ease-in-out;
-        &.current {
-          border-bottom: 3px solid white;
-          padding-bottom: 15px;
-        }
-      }
+  display: flex;
+  width: 100%;
+  a {
+    display: block;
+    flex: 1 100%;
+    text-align: center;
+    font-size: 0.8em;
+    text-decoration: none;
+    color: white;
+    &.current {
+      border-bottom: 5px solid white;
     }
   }
 }
-nav:hover {
-  ul li {
-    opacity: 0.7;
-  }
-  ul li:hover {
-    opacity: 1;
-  }
-}
 
-@include breakpoint(tablet) {
-  nav ul li a {
-    padding: 22px 20px;
-    &.current {
-      border-bottom: 5px solid white;
-      padding-bottom: 17px;
+@include breakpoint(phablet) {
+  :host {
+    width: auto;
+  }
+
+  nav {
+    width: auto;
+    a {
+      flex: auto;
+      padding: 16px 20px;
+      transition: all 200ms ease-in-out;
+      &.current {
+        border-bottom: 5px solid white;
+        padding-bottom: 11px;
+      }
+    }
+  }
+  nav:hover {
+    a {
+      opacity: 0.7;
+    }
+    a:hover {
+      opacity: 1;
     }
   }
 }
