--- a/src/app/modules/user/users/users.component.html
+++ b/src/app/modules/user/users/users.component.html
@@ -1,4 +1,6 @@
-<h1>Lista volontari</h1>
+<mat-toolbar>
+  <h1>Lista Volontari</h1>
+</mat-toolbar>
 <div class="topbar">
   <div class="main-actions">
     <a mat-raised-button color="primary" routerLink="/users/create">
