--- a/src/app/layout/main-nav/main-nav.component.scss
+++ b/src/app/layout/main-nav/main-nav.component.scss
@@ -1,4 +1,8 @@
 @import "../../../functions";
+@import "../../../variables";
+
+$foreground-palette: map-get($ronda-warehouse-theme, primary);
+$background-palette: map-get($ronda-warehouse-theme, background);
 
 :host {
   width: 100%;
@@ -13,9 +17,9 @@ nav {
     text-align: center;
     font-size: 0.8em;
     text-decoration: none;
-    color: white;
+    color: mat-color($foreground-palette, darker-contrast);
     &.current {
-      border-bottom: 5px solid white;
+      border-bottom: 5px solid mat-color($background-palette, background);
     }
   }
 }
@@ -32,7 +36,7 @@ nav {
       padding: 16px 20px;
       transition: all 200ms ease-in-out;
       &.current {
-        border-bottom: 5px solid white;
+        border-bottom-size: 5px;
         padding-bottom: 11px;
       }
     }
