--- a/src/app/modules/user/create-user/create-user.component.scss
+++ b/src/app/modules/user/create-user/create-user.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../functions";
+
 .mat-card-content {
   display: flex;
   flex-direction: column;
@@ -9,4 +11,14 @@
 
 .mat-card > .mat-card-actions:last-child {
   margin: 0;
+}
+
+@include breakpoint(phablet) {
+  form {
+    display: flex;
+    .mat-card {
+      max-width: 550px;
+      margin: 30px;
+    }
+  }
 }
