--- a/src/app/modules/user/create-user/create-user.component.html
+++ b/src/app/modules/user/create-user/create-user.component.html
@@ -57,9 +57,7 @@
       </mat-form-field>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit">
-        Crea utente
-      </button>
+      <button mat-raised-button color="primary" type="submit">Registra</button>
       <a mat-raised-button (click)="generatePassword()">Genera password</a>
     </mat-card-actions>
   </mat-card>
