refactor filters toolbar

--- a/src/app/modules/user/users-filters-sheet/users-filters-sheet.component.html
+++ b/src/app/modules/user/users-filters-sheet/users-filters-sheet.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="filtersForm" (submit)="onSubmit()">
   <mat-form-field>
     <mat-icon matPrefix>search</mat-icon>
-    <input type="text" matInput placeholder="Search" formControlName="search" />
+    <input type="text" matInput placeholder="Cerca" formControlName="search" />
   </mat-form-field>
   <mat-form-field>
     <mat-label>Ruolo</mat-label>
