--- a/src/app/modules/user/users-filters-sheet/users-filters-sheet.component.html
+++ b/src/app/modules/user/users-filters-sheet/users-filters-sheet.component.html
@@ -8,7 +8,7 @@
     <mat-select formControlName="role">
       <mat-option>Tutti</mat-option>
       <mat-option value="admin">Amministratore</mat-option>
-      <mat-option value="member">Volontario</mat-option>
+      <mat-option value="member">Volontari&#601;</mat-option>
     </mat-select>
   </mat-form-field>
   <mat-form-field>
