--- a/src/app/modules/user/users-filters/users-filters.component.html
+++ b/src/app/modules/user/users-filters/users-filters.component.html
@@ -17,7 +17,7 @@
     <mat-select (selectionChange)="dataSource.queryBy({ role: $event.value })">
       <mat-option>Tutti</mat-option>
       <mat-option value="admin">Amministratore</mat-option>
-      <mat-option value="member">Volontario</mat-option>
+      <mat-option value="member">Volontari&#601;</mat-option>
     </mat-select>
   </mat-form-field>
   <mat-form-field>
