--- a/src/app/modules/user/users/users.component.html
+++ b/src/app/modules/user/users/users.component.html
@@ -44,11 +44,13 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Ruolo</th>
       <td mat-cell *matCellDef="let row">
         <ng-container *ngIf="row.role === 'admin'">Amministratore</ng-container>
-        <ng-container *ngIf="row.role === 'member'">Volontario</ng-container>
+        <ng-container *ngIf="row.role === 'member'">
+          Volontari&#601;
+        </ng-container>
       </td>
     </ng-container>
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Statuo</th>
       <td mat-cell *matCellDef="let row">
         <ng-container *ngIf="row.status === 'enabled'">Abilitato</ng-container>
         <ng-container *ngIf="row.status === 'disabled'"
