--- a/src/app/modules/user/users-table/users-table.component.html
+++ b/src/app/modules/user/users-table/users-table.component.html
@@ -28,19 +28,13 @@
     <ng-container matColumnDef="role">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Ruolo</th>
       <td mat-cell *matCellDef="let row">
-        <ng-container *ngIf="row.role === 'admin'">Amministratore</ng-container>
-        <ng-container *ngIf="row.role === 'member'">
-          Volontari&#601;
-        </ng-container>
+        {{ availableRoles[row.role] }}
       </td>
     </ng-container>
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Statuo</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Stato</th>
       <td mat-cell *matCellDef="let row">
-        <ng-container *ngIf="row.status === 'enabled'">Abilitato</ng-container>
-        <ng-container *ngIf="row.status === 'disabled'"
-          >Disabiltato</ng-container
-        >
+        {{ availableStatuses[row.status] }}
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
