--- a/src/app/modules/user/users-table/users-table.component.html
+++ b/src/app/modules/user/users-table/users-table.component.html
@@ -1,4 +1,4 @@
-<div class="listing-wrapper">
+<div class="table-wrapper">
   <div class="spinner-container" *ngIf="dataSource.loading$ | async">
     <mat-spinner></mat-spinner>
   </div>
